<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    android:orientation="vertical"
    tools:context=".component.MainActivity">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/btn_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/my_collection"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/my_collection"
                android:src="@drawable/ic_collection" />

        </LinearLayout>

    </LinearLayout>


    <!-- Tab Navigation -->
    <LinearLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAll"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/tab_button_background"
            android:text="@string/tab_all"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPopular"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/tab_button_background"
            android:text="@string/tab_popular"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNew"
            android:layout_width="wrap_content"
            android:layout_height="40dp"

            android:layout_marginStart="8dp"
            android:background="@drawable/tab_button_background"
            android:text="@string/tab_new"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>


    <!-- RecyclerView for Categories -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:spanCount="2"
        tools:listitem="@layout/item_category" />


    <LinearLayout
        android:id="@+id/btnEditPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/bg_edit"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">


        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_editor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:text="@string/edit_photo"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>